# aramacao

./: CMakeLists.txt  README.md  actfn.cpp  actfn.h  actgetfn.cpp  actgetfn.h  acthasfn.cpp  acthasfn.h  actisfn.cpp  actisfn.h  actsetconstvaluefn.cpp  actsetconstvaluefn.h  actsetcopyfn.cpp  actsetcopyfn.h  actsetmovefn.cpp  actsetmovefn.h  actsetmutvaluefn.cpp  actsetmutvaluefn.h  aramacao_zh_CN.ts  basicblock.cpp  basicblock.h  codeeditor.cpp  codeeditor.h  comboboxdelegate.cpp  comboboxdelegate.h  constexprfunctions.cpp  constexprfunctions.h  constructors.cpp  constructors.h  copyconstructorfn.cpp  copyconstructorfn.h  copyoperatoreqfn.cpp  copyoperatoreqfn.h  defaultconstructorfn.cpp  defaultconstructorfn.h  deserializefn.cpp  deserializefn.h  destructorfn.cpp  destructorfn.h  eobject.cpp  (+143 more)
qdarkstyle/dark/: darkstyle.qss
qdarkstyle/light/: lightstyle.qss
